direct API calls for smoketest, fixed model